@@ -26,6 +26,8 @@ apt (0.8.16~exp7) UNRELEASEDexperimental; urgency=low
     - refactor MergeList by creating -Group, -Package and -Version specialist
     - share description list between "same" versions (LP: #868977)
       This also means that descriptions are shared across archives now.
+    - add implicit dependencies needed for Multi-Arch at the time a Version
+      struct is created and not at the end of the cache generation
 
   [ Michael Vogt ]
   * apt-pkg/contrib/configuration.cc:
@@ -40,7 +42,7 @@ apt (0.8.16~exp7) UNRELEASEDexperimental; urgency=low
   * ftparchive/cachedb.cc:
     - fix buffersize in bytes2hex
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 12 Oct 2011 15:47:43 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 12 Oct 2011 20:02:25 +0200
 
 apt (0.8.16~exp6) experimental; urgency=low
 
